# math-tagger-mlops

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  server_check.py
catboost_info/: learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
configs/: config.yaml
configs/data/: math_dataset.yaml
configs/model/: catboost.yaml  logreg.yaml
configs/train/: default.yaml
data/raw/: test.csv.dvc  train.csv.dvc
math_classifier/: commands.py  config_check.py  data_local.py  datamodule.py  infer.py  inference_pipeline.py  model.py  server_check.py  to_trt.py  train.py
math_classifier/trainers/: catboost_trainer.py  logreg_trainer.py
src/math_classifier/: __init__.py  commands.py  data_local.py  datamodule.py  infer.py  inference_pipeline.py  model.py  server_check.py  train.py
src/math_tagger_mlops/: __init__.py
