[project]
name = "math-tagger-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ilya E", email = "elushoviv@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/math_classifier"]

[project.scripts]
math-tagger-mlops = "math_classifier:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
